plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/durationMinusDate.xpath2
if (true()) then
'P0DT0H' cast as xs:dayTimeDuration - <error descr="Expected type 'xs:duration', got 'xs:date'">current-date()</error>
else
'P0Y' cast as xs:yearMonthDuration - <error descr="Expected type 'xs:duration', got 'xs:date'">current-date()</error>